# achat-immo

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
.github/workflows/: sourcing.yml  viability-map.yml
.streamlit/: secrets.toml.example
app/: __init__.py  components.py  help_texts.py  navigation.py  runtime_checks.py  runtime_config.py  sidebar.py  simulation_views.py  streamlit_app.py  ui_helpers.py
app/pages/: __init__.py  annonce.py  (+5 more)
docs/: configuration_audit.md  phase2_implementation_plan.md  roadmap.md
scripts/: build_viability_map.py  collect_jinka_alert_ads.py  hash_streamlit_password.py  ingest_imap_alerts.py  ingest_source_archive.py  mass_sim_dashboard.py  migrate_sqlite_to_postgres.py  monte_carlo_grenoble.py  run_mass_simulation.py  run_orchestrator.py  score_dummy_listings.py  setup_jinka_session.py  test_llm_extraction.py  validate_viability_map.py
tests/: test_auth.py  test_cashflow.py  test_city_profiles.py  test_comparison_export.py  test_content_guard.py  test_decision_cockpit.py  test_fiscal_rules.py  test_grids.py  test_hypothesis_inference.py  test_investment_profile.py  test_investment_profile_ui.py  test_jinka_collect.py  test_llm_agent_browser.py  test_loan.py  test_manual_analysis.py  test_mass_simulation.py  test_prefilter.py  test_qualification.py  test_robustness.py  test_run_deltas.py  test_run_orchestrator.py  test_scenario_metrics.py  test_scenarios.py  test_schemas.py  test_sourcing_discovery.py  test_sourcing_queue_actions.py  test_stochastic.py  test_storage.py  test_streamlit_ui_helpers.py  test_taxes.py  test_taxes_lmnp.py  test_taxes_location_nue.py  test_taxes_micro.py  test_taxes_reports.py  test_viability.py
(+96 files in other folders)
