[project]
name = "finances"
version = "0.1.1"
description = "Simulateur Python d'investissement immobilier locatif."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "narwhals>1.43",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "plotly>=6.1.2",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.11.7",
    "rich>=15.0.0",
    "scipy>=1.15.3",
    "streamlit>=1.41.0",
    "watchdog>=6.0.0",
]

[project.scripts]
achat-immo = "achat_immo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"app/*.py" = ["E402"]
"scripts/*.py" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["src/achat_immo"]
